# claw

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claw_bk/: settings.json  settings.local.json
.github/workflows/: main.yml
.omc/state/: hud-state.json  hud-stdin-cache.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.claw/: settings.local.json
src-tauri/.omc/state/: hud-state.json  hud-stdin-cache.json
src-tauri/src/: lib.rs  main.rs  user.rs
src-tauri/src/harness/: config.rs  mcp.rs  mod.rs  plugins.rs  project_memory.rs
src-tauri/src/harness/api/: client.rs  mod.rs  providers.rs  sse.rs
src-tauri/src/harness/daemon/: heartbeat.rs  mod.rs
src-tauri/src/harness/runtime/: conversation.rs  mod.rs  session.rs  session_manager.rs
src-tauri/src/harness/telemetry/: cost.rs  mod.rs  usage.rs
src-tauri/src/harness/tools/: definitions.rs  executor.rs  mod.rs  permissions.rs
src-tauri/tests/: api_tests.rs  config_tools_tests.rs  session_tests.rs
src/__tests__/: useAuth.test.ts  useLogger.test.ts
src/composables/: useAuth.ts  useLogger.ts
src/router/: index.ts
src/views/: Chat.vue  Home.vue  Login.vue  Profile.vue  Register.vue
