[package]
name = "ssk"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ssk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
log = "0.4"
tauri-plugin-log = "2.8.0"
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
futures = "0.3"
urlencoding = "2"
tokio = { version = "1", features = ["full"] }
glob = "0.3"
regex = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"

